# swan-engine

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  imgui.ini  notes  run.sh
build-debug/: CMakeCache.txt  Gazelle  Makefile  SwanEngine  cmake_install.cmake
include/: stb_image.h
include/glad/: glad.h
include/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
lib/: glad.c
resources/models/example/container/: Container.mtl
resources/shaders/: color.frag  color.vert  color_light.frag  color_light.vert  default.frag  default.vert  model_loading.frag  model_loading.vert  texture.frag  texture.vert
resources/textures/engine/: attr
resources/textures/prototype/: source
src/: Global.h  cube_vertices.h  main.cpp
src/engine/: EngineCamera.cpp  EngineCamera.h  FrameBuffer.cpp  FrameBuffer.h  Mesh.h  Model.cpp  Model.h  Shader.h  TextureLoader.cpp  TextureLoader.h  camera.h  shader.h
src/engine/components/: EngineCamera.cpp  EngineCamera.h  Mesh.h  Model.cpp  Model.h  PointLight.cpp  PointLight.h  Skybox.cpp  Skybox.h  Transform.cpp  Transform.h
src/engine/entity/: Component.cpp  Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  template_cpp.txt  template_h.txt
src/engine/ui/: EngineUI.cpp  EngineUI.h  imgui_style.h
